# RustyQueue

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  config.toml  docker-compose.yml
.github/workflows/: ci.yml
migrations/: 20250101_initial.sql
src/: config.rs  error.rs  lib.rs  main.rs  metrics.rs
src/api/: extractors.rs  handlers.rs  mod.rs
src/db/: mod.rs  models.rs  queries.rs
src/middleware/: mod.rs
src/watchdog/: mod.rs
src/worker/: dispatcher.rs  executor.rs  mod.rs
tests/: integration_test.rs
